force-app/main/default/objects/Warship__c/fields/ActiveMilestones__c.field-meta.xml
<CustomField>
    <fullName>ActiveMilestones__c</fullName>
    <label>Active Milestones</label>
    <summaryFilterItems>
        <field>Milestone__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone__c.Warship__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>