force-app/main/default/objects/Warship__c/fields/Project_Status_Classification__c.field-meta.xml
<CustomField>
    <fullName>Project_Status_Classification__c</fullName>
    <formula>IF(
  ISPICKVAL( Project_Status__c , &apos;Green&apos;) ,
  IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;, 15, 15),
  IF(
  ISPICKVAL( Project_Status__c , &apos;Yellow&apos;) ,
  IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Yellow&quot;, 15, 15),
    IF(
    ISPICKVAL( Project_Status__c , &apos;Red&apos;) ,
    IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;, 15, 15),
    IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Complte&quot;, 15, 15)
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Status Classification</label>
    <type>Text</type>
</CustomField>