force-app/main/default/objects/Warship__c/fields/Weapons_Status__c.field-meta.xml
<CustomField>
    <fullName>Weapons_Status__c</fullName>
    <label>Weapons Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Operational</fullName>
            </value>
            <value>
                <fullName>Fully Operacional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>