force-app/main/default/objects/Warship__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ActiveMilestones__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Project_Status_Classification__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>